# sphinxcontrib-mixed-builder

./: .buildinfo  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: github-pages.yml
_sources/: slides.rst.txt  usage.rst.txt
_sources/slides/: introduction.rst.txt
_static/: documentation_options.js
doc/: conf.py  index.rst  usage.rst
genindex/: index.html
search/: index.html
slides/: index.html  introduction.html
sphinxcontrib/: mixed_builder.py
usage/: index.html
