[tool.poetry]
name = "sphinxcontrib-mixed-builder"
version = "0.4.2"
description = "Generate mixed contents by multiple bulders on Sphinx"
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
]
packages = [
    { include = "sphinxcontrib" },
]

[tool.poetry.dependencies]
python = "^3.7 | ^3.8 | ^3.9 | ^3.10"
Sphinx = "*"

[tool.poetry.dev-dependencies]
sphinx-revealjs = "^1.4.6"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
